--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "devextreme-react": "24.2.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.3.0",
     "sass-embedded": "^1.85.1"
