--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
- VITE_LocalBase_URL=" http://localhost:5173"
+ VITE_LocalBase_URL="https://sraecems.redgto.com.mx"
  VITE_SubDominio_URL=""
- VITE_WebApi_URL="http://localhost:5194" #aqui se incluye el subdominio ejempo http://localhost:5194/subdominio
+ VITE_WebApi_URL="https://sraecems.back.redgto.com.mx"
 
