--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.8",
     "devextreme": "24.2.8",
     "devextreme-react": "24.2.8",
+    "katex": "^0.16.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
